--- a/end.html
+++ b/end.html
@@ -10,29 +10,33 @@
     <link rel="stylesheet" href="dist/css/style.css" />
   </head>
   <body>
-    <div class="wrapper">
+    <div class="imgfo">
+      <img src="assets/pic.jpg" alt="" />
+    </div>
+    <div id="wrapper">
       <div>
-        <i class="fas fa-award award_icon"></i>
         <h3 class="username">well done! <span class="name"></span></h3>
         <p class="userpoints">Your Points <span class="points"></span></p>
-        <p class="userpoints">Auditory <span class="apoints"></span></p>
-        <p class="userpoints">Visual <span class="vpoints"></span></p>
-        <p class="userpoints">Tactile <span class="tpoints"></span></p>
+        <p class="userpoints">Auditory : <span class="apoints"></span></p>
+        <p class="userpoints">Visual : <span class="vpoints"></span></p>
+        <p class="userpoints">Tactile :<span class="tpoints"></span></p>
         <p class="usertime">Time taken <span class="time_taken"></span></p>
         <p class="wordshere">
-          your preferred learning style is <span class="typehere"></span>
+          Your response indicates that your preferred learning style is
+          <span class="typehere"></span>
         </p>
+        <br /><br />
         <p class="audiexp">
-          <a href="audi.html"><button>Auditory</button></a> know about your
-          learning style
+          <a href="audi.html"><button>View study tips</button></a> for your
+          preferred learning style
         </p>
         <p class="viscoexp">
-          <a href="visco.html"><button>Visual</button></a> know about your
-          learning style
+          <a href="visco.html"><button>View study tips</button></a> for your
+          preferred learning style
         </p>
         <p class="tacoexp">
-          <a href="taco.html"><button>Tactile/ Kinesthetic</button></a> know
-          about your learning style
+          <a href="taco.html"><button>View study tips</button></a> for your
+          preferred learning style
         </p>
       </div>
     </div>
