--- a/visco.html
+++ b/visco.html
@@ -5,34 +5,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Visual</title>
+    <link rel="stylesheet" href="./dist/css/style.css" />
   </head>
   <body>
-    <p class="vis" disabled>
-      Visual learners learn best when information is presented in a written
-      language format or in another visual format such as pictures or diagrams.
-      If you are a visual learner, the suggestions that follow can help you to
-      succeed in school to the best of your ability. Create graphic organizers
-      such as diagrams and concept maps that use visual symbols to represent
-      ideas and information. When trying to remember information, close your
-      eyes and visualize the information. Include illustrations as you take
-      notes in class. Use highlighter pens of contrasting colors to color code
-      different aspects of the information in your textbooks. Sit in the front
-      of the class so that you can clearly see the teacher. This will allow you
-      to pick up facial expressions and body language that provide cues that
-      what your teacher is saying is important to write in your notes. Take our
-      free Learning Style Assessment Take our free Learning Style Assessment
-      Study in a place that is free from visual distractions. When using
-      flashcards, limit the amount of information on a card so that you can form
-      a mental picture of the information. Watch videos about topics you are
-      studying in class. When hearing a new word you want to remember, visualize
-      its spelling. When reviewing information, rewrite or draw the information
-      from memory. When taking notes, replace words with symbols wherever
-      possible. Type your written notes from class using different fonts, bold
-      print, and underlining to make the most important concepts and facts
-      visually apparent. When solving math problems that involve a sequence of
-      steps, draw a series of boxes, each containing the appropriate piece of
-      information in sequence. Try these suggestions and learn which ones work
-      best for you.
-    </p>
+    <div class="audi" disabled>
+      <div class="imgfo">
+        <img src="assets/pic.jpg" alt="" />
+      </div>
+      <br /><br />
+      <div class="flexbox">
+        
+          <h3 id="audi-topic">
+            &nbsp; &nbsp; &nbsp; <i>Visual learners</i> learn best when
+            information is presented in a written language format or in another
+            visual format such as pictures or diagrams. If you are a visual
+            learner, the suggestions that follow can help you to succeed in
+            school to the best of your ability.
+          </h3>
+        </div>
+        <div class="images">
+          <img src="assets/visual.png" alt="" />
+        </div>
+      </div>
+      <br />
+
+      <div class="ul">
+        <ul>
+          <li>
+            Create graphic organizers such as diagrams and concept maps that use
+            visual symbols to represent ideas and information.
+          </li>
+          <li>
+            When trying to remember information, close your eyes and visualize
+            the information.
+          </li>
+          <li>Include illustrations as you take notes in class.</li>
+          <li>
+            Use highlighter pens of contrasting colors to color code different
+            aspects of the information in your textbooks.
+          </li>
+          <li>
+            Sit in the front of the class so that you can clearly see the
+            teacher.
+          </li>
+          <li>
+            This will allow you to pick up facial expressions and body language
+            that provide cues that what your teacher is saying is important to
+            write in your notes.
+          </li>
+          <li>
+            Take our free Learning Style Assessment Take our free Learning Style
+            Assessment Study in a place that is free from visual distractions.
+          </li>
+          <li>
+            When using flashcards, limit the amount of information on a card so
+            that you can form a mental picture of the information.
+          </li>
+          <li>Watch videos about topics you are studying in class.</li>
+
+          <li>
+            When hearing a new word you want to remember, visualize its
+            spelling.
+          </li>
+          <li>
+            When reviewing information, rewrite or draw the information from
+            memory.
+          </li>
+          <li>
+            When taking notes, replace words with symbols wherever possible.
+          </li>
+          <li>
+            Type your written notes from class using different fonts, bold
+            print, and underlining to make the most important concepts and facts
+            visually apparent.
+          </li>
+          <li>
+            When solving math problems that involve a sequence of steps, draw a
+            series of boxes, each containing the appropriate piece of
+            information in sequence.
+          </li>
+          <li>Try these suggestions and learn which ones work best for you.</li>
+        </ul>
+      </div>
+    </div>
+
+    <br />
+    <hr />
+    <div class="imgfoo">
+      <img src="assets/3types.jpg" alt="" />
+    </div>
   </body>
 </html>
