--- a/end.html
+++ b/end.html
@@ -5,17 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>JavaScript Quiz</title>
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display&display=swap"
+      rel="stylesheet"
+    />
     <!-- style.css -->
     <link rel="stylesheet" href="dist/css/style.css" />
+
+    <style>
+      #wrapper h3 {
+        font-family: "Playfair Display", serif;
+        color: #763a4f;
+        font-weight: bolder;
+      }
+      #wrapper p {
+        font-family: "Montserrat", sans-serif;
+        color: #763a4f;
+        font-weight: bolder;
+      }
+    </style>
   </head>
   <body>
     <div class="imgfo">
-      <img src="assets/pic.jpg" alt="" />
+      <img src="assets/last.png" alt="" />
     </div>
     <div id="wrapper">
       <div>
-        <h3 class="username">well done! <span class="name"></span></h3>
+        <h3 class="username">Well Done! <span class="name"></span></h3>
         <p class="userpoints">Your Points <span class="points"></span></p>
         <p class="userpoints">Auditory : <span class="apoints"></span></p>
         <p class="userpoints">Visual : <span class="vpoints"></span></p>
