--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>What is your Learning Style?</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display&display=swap"
+      rel="stylesheet"
+    />
 
     <style>
       :root {
@@ -19,12 +27,12 @@
         display: block;
         margin: 20% auto;
         text-align: center;
-        color: rgb(241, 241, 240);
+        color: #ffffff;
         font-size: large;
-        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+        font-family: "Montserrat", sans-serif;
       }
       .head {
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        font-family: "Playfair Display", serif;
         font-size: 60px;
         font-weight: bold;
         color: #ffffff;
@@ -32,16 +40,16 @@
       #btn {
         padding: 15px;
         margin: 20px;
-        background-color: rgb(236, 205, 68);
-        color: #ffffff;
+        background-color: white;
+        color: #000000;
         cursor: pointer;
         text-decoration: none;
         border: 2px black solid;
         border-radius: 4px;
       }
       #btn:hover {
-        background-color: black;
-        border: 2px rgb(236, 205, 68) solid;
+        background-color: white;
+        border: 2px black solid;
       }
       @media (max-width: 540px) {
         .head {
@@ -81,10 +89,7 @@
       <br />
       <section class="typo">
         <p>Your preferred learning style is the way in which you learn best.</p>
-        <p>
-          Three learning styles that are often identified in students are :
-          Auditory , Visual , Tactile/Kinesthetic.
-        </p>
+        <p>Auditory , Visual , Tactile/Kinesthetic.</p>
       </section>
     </div>
 
