--- a/taco.html
+++ b/taco.html
@@ -10,9 +10,9 @@
   </head>
   <div>
     <div class="audi" disabled>
-      <div class="imgfo">
+      <!--<div class="imgfo">
         <img src="assets/pic.jpg" alt="" />
-      </div>
+      </div>-->
 <br><br>
 <div class="flexbox">
  
@@ -93,9 +93,9 @@ occasionally walk back and forth with your textbook or notes
 </div>
 <br>
 <hr>
-<div class="imgfoo">
+<!--<div class="imgfoo">
   <img src="assets/3types.jpg" alt="" />
-</div>  </body>
+</div>-->  </body>
 </html>
 
 
