--- a/audi.html
+++ b/audi.html
@@ -9,9 +9,9 @@
   </head>
   <div>
     <div class="audi" disabled>
-      <div class="imgfo">
+     <!-- <div class="imgfo">
         <img src="assets/pic.jpg" alt="" />
-      </div>
+      </div>-->
 <br><br>
 <div class="flexbox">
       <h3 id="audi-topic">
@@ -78,7 +78,7 @@
 </div>
 <br>
 <hr>
-<div class="imgfoo">
+<!--<div class="imgfoo">
   <img src="assets/3types.jpg" alt="" />
-</div>  </body>
+</div> --> </body>
 </html>
