--- a/visco.html
+++ b/visco.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <div class="audi" disabled>
-      <div class="imgfo">
+      <!--<div class="imgfo">
         <img src="assets/pic.jpg" alt="" />
-      </div>
+      </div>-->
       <br /><br />
       <div class="flexbox">
         
@@ -23,7 +23,7 @@
             school to the best of your ability.
           </h3>
         </div>
-        <div class="images">
+       <div class="images">
           <img src="assets/visual.png" alt="" />
         </div>
       </div>
@@ -91,8 +91,8 @@
 
     <br />
     <hr />
-    <div class="imgfoo">
+    <!--<div class="imgfoo">
       <img src="assets/3types.jpg" alt="" />
-    </div>
+    </div>-->
   </body>
 </html>
