--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         display: block;
         margin: 20% auto;
         text-align: center;
-        color: #ffffff;
+        color: #000000;
         font-size: large;
         font-family: "Montserrat", sans-serif;
       }
@@ -35,7 +35,7 @@
         font-family: "Playfair Display", serif;
         font-size: 60px;
         font-weight: bold;
-        color: #ffffff;
+        color: #000000;
       }
       #btn {
         padding: 15px;
@@ -89,7 +89,7 @@
       <br />
       <section class="typo">
         <p>Your preferred learning style is the way in which you learn best.</p>
-        <p>Auditory , Visual , Tactile/Kinesthetic.</p>
+        <!--<p>Auditory , Visual , Tactile/Kinesthetic.</p>-->
       </section>
     </div>
 
