--- a/quiz.html
+++ b/quiz.html
@@ -23,9 +23,9 @@
             </div>
             <!--<h4>Welcome! <span class="name"></span></h4>-->
           </div>
-          <div class="quiz_timer">
+          <!-- <div class="quiz_timer">
             <span class="time">00:00</span>
-          </div>
+          </div>-->
         </div>
         <div class="quiz_body">
           <div class="heado">
