--- a/end.html
+++ b/end.html
@@ -45,7 +45,9 @@
           Your response indicates that your preferred learning style is
           <span class="typehere"></span>
         </p>
-        <br /><br />
+      </div>
+    </div>
+    <!--  <br /><br />
         <p class="audiexp">
           <a href="audi.html"><button>View study tips</button></a> for your
           preferred learning style
@@ -60,7 +62,7 @@
         </p>
       </div>
     </div>
-    <script src="https://kit.fontawesome.com/d56261bbb9.js"></script>
+    <script src="https://kit.fontawesome.com/d56261bbb9.js"></script>-->
 
     <!-- user info -->
     <script src="dist/js/site.js"></script>
